--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,48 @@ main {
   }
 }
 
+// メンバー選択UIのスタイル
+.member-select-container {
+  max-height: 300px;
+  overflow-y: auto;
+  background-color: #fff;
+  border-color: #ced4da !important;
+
+  .member-list {
+    .form-check {
+      padding: 0.5rem 1rem;
+      margin: 0;
+      transition: background-color 0.15s ease-in-out;
+      
+      &:hover {
+        background-color: #f8f9fa;
+      }
+    }
+  }
+
+  hr {
+    margin: 0.5rem 0;
+    color: #ced4da;
+  }
+}
+
+.form-check {
+  .form-check-input {
+    cursor: pointer;
+
+    &:checked {
+      background-color: #0d6efd;
+      border-color: #0d6efd;
+    }
+  }
+
+  .form-check-label {
+    cursor: pointer;
+    user-select: none;
+    padding-left: 0.5rem;
+    color: #212529;
+  }
+}
+
 // Import other styles
 @import "top";
- 
