--- a/app/views/shared/_after_login_header.html.erb
+++ b/app/views/shared/_after_login_header.html.erb
@@ -29,8 +29,8 @@
               <%= link_to "名前", "#", class: "dropdown-item" %>
               <%= link_to "メールアドレス", "#", class: "dropdown-item" %>
               <%= link_to "パスワード", "#", class: "dropdown-item" %>
-              <%= link_to "友だち追加", "#", class: "dropdown-item" %>
-              <%= link_to "友だち一覧", "#", class: "dropdown-item" %>
+              <%= link_to "友だち追加", friend_requests_path, class: "dropdown-item" %>
+              <%= link_to "友だち一覧", friendships_path, class: "dropdown-item" %>
               <%= link_to "ログアウト", logout_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
             </div>
           </li>
