--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -2,6 +2,9 @@
      data-controller="schedule-editor"
      data-schedule-editor-travel-id-value="<%= @travel.id %>"
      data-schedule-editor-spot-list-outlet=".spots-list">
+  <div class="alert alert-info my-4">
+    <i class="bi bi-info-circle"></i> 各スポットは、カードをドラッグして日時の変更が可能です。変更内容を保存するには、画面下部の更新ボタンをクリックしてください。
+  </div>
   <div class="row">
     <div class="col-12">  <%# col-md-8 から col-12 に変更 %>
       <% total_days = (@travel.end_date - @travel.start_date).to_i + 1 %>
@@ -28,5 +31,10 @@
         <% end %>
       <% end %>
     </div>
+  </div>
+  <div class="text-center mt-4 mb-4">
+    <button class="btn btn-primary btn-lg" data-action="schedule-editor#updateSchedules">
+      更新する
+    </button>
   </div>
 </div>
