--- a/app/assets/stylesheets/spots.scss
+++ b/app/assets/stylesheets/spots.scss
@@ -93,15 +93,6 @@
     &:active {
       cursor: grabbing;
     }
-
-    .badge {
-      width: 24px;
-      height: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 12px;
-    }
   }
 }
 
@@ -175,4 +166,13 @@
       }
     }
   }
+}
+.badge[data-spot-number] {
+  min-width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9rem;
+  font-weight: bold;
 }
