--- a/app/views/spots/_spot.html.erb
+++ b/app/views/spots/_spot.html.erb
@@ -1,25 +1,19 @@
 <div class="spot-item card mb-2" 
      data-spot-id="<%= spot.id %>" 
      data-category="<%= spot.category %>"
-     data-day="<%= spot.schedule&.day_number %>"
-     data-time-zone="<%= spot.schedule&.time_zone %>">
-  <div class="card-body">
+     draggable="true">
+  <div class="card-body p-2">
     <div class="d-flex justify-content-between align-items-center">
       <div class="d-flex align-items-center">
-        <span class="spot-number badge bg-<%= category_badge_class(spot.category) %> me-2" data-spot-number></span>
-        <div class="spot-name">
-          <%= spot.name %>
-          <span class="badge <%= category_badge_class(spot.category) %>">
-            <%= spot.category %>  <%# category_displayがうまく動作しない場合はcategoryに変更 %>
-          </span>
-        </div>
+        <span class="badge bg-<%= category_badge_class(spot.category) %> me-2" data-spot-number>
+          <%= schedule&.order_number %>
+        </span>
+        <span class="spot-name"><%= spot.name %></span>
       </div>
       <button type="button" 
               class="btn btn-outline-danger btn-sm"
-              data-action="spots-registration#deleteFromList"
-              data-spots-registration-spot-id-param="<%= spot.id %>"
-              data-spots-registration-schedule-id-param="<%= spot.schedule&.id %>">
-        <i class="bi bi-trash"></i> 削除
+              data-action="spots-registration#deleteFromList">
+        <i class="bi bi-trash"></i>
       </button>
     </div>
   </div>
