--- a/app/views/shared/_after_login_header.html.erb
+++ b/app/views/shared/_after_login_header.html.erb
@@ -15,7 +15,7 @@
           </li>
 
           <li class="nav-item">
-            <%= link_to "持物リスト", "#", class: "nav-link" %>
+            <%= link_to "持物リスト", packing_lists_path, class: "nav-link" %>
           </li>
           
           <li class="nav-item dropdown" data-controller="dropdown">
