--- a/app/views/packing_lists/index.html.erb
+++ b/app/views/packing_lists/index.html.erb
@@ -9,7 +9,15 @@
   <% else %>
     <div class="list-group mb-4">
       <% @packing_lists.each do |list| %>
-        <%= link_to list.name, packing_list_path(list), class: "list-group-item list-group-item-action" %>
+        <div class="list-group-item d-flex justify-content-between align-items-center">
+          <%= link_to list.name, packing_list_path(list), class: "flex-grow-1 text-decoration-none text-dark" %>
+          <%= button_to packing_list_path(list), 
+                method: :delete,
+                class: "btn btn-link text-danger p-0 ms-3",
+                data: { turbo_confirm: "このリストを削除してもよろしいですか？" } do %>
+            <i class="bi bi-trash"></i>
+          <% end %>
+        </div>
       <% end %>
     </div>
     
