プライバシーポリシー

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class='col-sm-6 col-12'>
         <div class='nav-item'>
           <%= link_to "利用規約", "#", class: "nav-link" %>
-          <%= link_to "プライバシーポリシー", "#", class: "nav-link" %>
+          <%= link_to "プライバシーポリシー", privacy_policy_path, class: "nav-link" %>
         </div>
       </div>
     </div>
