--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class='row'>
       <div class='col-sm-6 col-12'>
         <div class='nav-item'>
-          <%= link_to "利用規約", "#", class: "nav-link" %>
+          <%= link_to "利用規約", terms_of_service_path, class: "nav-link" %>
           <%= link_to "プライバシーポリシー", privacy_policy_path, class: "nav-link" %>
         </div>
       </div>
