--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,7 @@
         <div class='nav-item'>
           <%= link_to "利用規約", terms_of_service_path, class: "nav-link" %>
           <%= link_to "プライバシーポリシー", privacy_policy_path, class: "nav-link" %>
+          <%= link_to "お問い合わせ", contact_us_path, class: "nav-link" %>
         </div>
       </div>
     </div>
