--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -65,6 +65,11 @@
         <h2 class="h5 fw-bold">プライバシーポリシーの変更</h2>
         <p>当方は、必要に応じて、このプライバシーポリシーの内容を変更します。この場合、変更後のプライバシーポリシーの施行時期と内容を適切な方法により周知または通知します。</p>
       </section>
+
+      <section class="mb-4">
+        <h2 class="h5 fw-bold">お問い合わせ</h2>
+        <p>お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、<%= link_to "お問い合わせフォーム", contact_us_path, class: "link-primary" %>よりご連絡ください。</p>
+      </section>
     </div>
   </div>
 </div>
