ファビコン設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
   <%= display_meta_tags(default_meta_tags) %>
+  <%= favicon_link_tag('favicon.ico') %>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1B4W1Z9MZ5"></script>
   <script>
